2000-12-04  John Harper  <jsh@eazel.com>

	* version 0.34

	* sawfish/wm/keymaps.jl (wm-modifier-value): moved to the
	`novice' user-level

2000-11-28  John Harper  <jsh@eazel.com>

	* sawfish/wm/custom-defaults.jl: changed some bindings to use
	`W-' modifier

	* sawfish/wm/util/decode-events.jl (decode-modifier,
	encode-modifier): new functions
	(should-grab-button-event-p): groks the `W-' modifier

	* sawfish/wm/ext/match-window.jl (match-window-properties):
	removed ignore-when-cycling property (didn't I already do
	this?)

	* sawfish/wm/keymaps.jl: changed default bindings to use the
	new `W-' modifier, the customizable `WM' modifier

	* sawfish/wm/keymaps.jl (wm-modifier-value): new option. Has
	type `modifier-list'. Added [de]serialization for this type

	* sawfish/wm/customize.jl (customize-read-user-file): fixed for
	new format of custom-default-file

	* sawfish/wm/util/ping.jl (ping-window): fixed bug whereby
	CALLBACK would get called twice if the ping is ponged before
	the timer fires

	* sawfish/wm/state/gnome.jl (gnome-window-class-hacks): broke
	out the WM_CLASS based hacks for parts of the GNOME desktop.
	Also made panel windows and gmc icons unplacable (otherwise, if
	the ignore-program-position option is set the windows get
	placed by the wm, even though they really shouldn't be)

	* sawfish/wm/state/wm-spec.jl: added the unplacable panel hack
	here also

2000-11-27  John Harper  <jsh@eazel.com>

	* sawfish/wm/state/wm-spec.jl: removed the evil hardcoded list
	of properties in update-client-state by a `get' method in each
	state function. Also added a PSEUDO keyword arg to
	define-wm-spec-window-state for properties that should not be
	set in the _NET_WM_STATE property

	* sawfish/wm/ext/window-history.jl: save and restore
	`maximized' state of windows. Fixes #4790

	* sawfish/wm/ext/window-history.jl (window-history-apply): when
	setting properties, check for `window-history-setter'
	properties - a function to call to set the property
